--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="taskName">My task</string>
     <string name="task_description">Task description</string>
     <string name="task_description_goes_here">Task description goes here.</string>
+    <string name="new_task">New Task</string>
+    <string name="label_description">Description</string>
+    <string name="task_name">Task Name</string>
+    <string name="task_description_hint">Please add a short description</string>
+    <string name="task_name_hint">Task name</string>
 </resources>
